<resources>
    <string name="app_name">手机号定位</string>
    <string name="app_name_en">telephone</string>
    <string name="main_page">主页</string>
    <string name="warn">警告</string>
    <string name="unauthorized_app_notify">您安装的"手机号定位"软件是盗版的，请下载正式版！</string>
    <string name="net_go_wrong_please_check">网络出问题了，检查一下吧~_~</string>
    <string name="seconds_later_reconnect">秒后开始重连</string>
    <string name="reconnecting">正在重连...</string>
    <string name="reconnect_fail_and_reconnecting">尝试重连...</string>
    <string name="reconnect_success">重连成功！</string>
    <string name="reconnect_failed">重连失败！</string>
    <string name="same_account_logined">同一账号已在另一地方登录，自动下线！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="no_trace_data">还没有足迹数据！</string>
    <string name="input_efence_name">请输入围栏名称</string>
    <string name="check_update">检查更新</string>
    <string name="home_page">主页</string>
    <string name="friends">好友</string>
    <string name="messages">消息</string>
    <string name="find">发现</string>
    <string name="setting">设置</string>
    <string name="set_efence">设置围栏</string>
    <string name="one_km">1千米</string>
    <string name="two_km">2千米</string>
    <string name="three_km">3千米</string>
    <string name="four_km">4千米</string>
    <string name="five_km">5千米</string>
    <string name="no_efence_name">您还没有输入围栏名称!</string>
    <string name="exit_toast">再按一次返回键关闭程序</string>
    <string name="locating">定位中...</string>
    <string name="self_not_located">自己还未定位成功^~^</string>
    <string name="beyond_efence">离开了围栏</string>
    <string name="enter_efence">进入围栏</string>
    <string name="exit">退出</string>
    <string name="exit_but_receive_msg">退出后仍接收消息吗？</string>
    <string name="not_login">未登录！</string>
    <string name="baidu_app_not_support">您尚未安装百度地图app或app版本过低，点击确认安装？</string>
    <string name="trace">足迹</string>
    <string name="fence_already_exists_please_rename">此围栏已存在，请重新命名！</string>
    <string name="first_enter_txt10">分享位置</string>
    <string name="first_enter_txt11">随时随地</string>
    <string name="first_enter_txt20">实时信息</string>
    <string name="first_enter_txt21">便捷沟通</string>
    <string name="first_enter_txt30">足迹</string>
    <string name="first_enter_txt31">走过回忆</string>
    <string name="first_enter_txt40">电子围栏</string>
    <string name="first_enter_txt41">邂逅美丽</string>
    <string name="guest_login">游客登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="open">打开</string>
    <string name="will_open_network">网络连接不可用，是否打开网络连接？</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="welcome">欢迎</string>
    <string name="login_app">登录手机号定位</string>
    <string name="register_app">注册手机号定位</string>
    <string name="input_nick">请输入昵称</string>
    <string name="nick_format_err">昵称含有特殊字符</string>
    <string name="nick_too_long">昵称太长</string>
    <string name="signature_format_err">签名含有特殊字符</string>
    <string name="signature_too_long">签名太长</string>
    <string name="address_format_err">地址含有特殊字符</string>
    <string name="address_too_long">地址太长</string>
    <string name="input_account">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_re_pwd">请再次输入密码</string>
    <string name="no_account_to_register">您还没有账号?请先注册</string>
    <string name="phone_format_err">请输入正确的手机号</string>
    <string name="account_format_error">账号格式不正确</string>
    <string name="pwd_len_err">密码长度最少6位</string>
    <string name="second_pwd_not_equal">两次输入密码不一致</string>
    <string name="pwd_format_err">有特殊字符或长度（6到12位）不对</string>
    <string name="loading">加载中...</string>
    <string name="account_error">用户名或密码错误</string>
    <string name="account_not_exist">用户不存在</string>
    <string name="net_error">网络错误</string>
    <string name="connect_error">连接错误</string>
    <string name="error_unknown">与服务器连接已断开，请检查网络。</string>
    <string name="unknown_error">未知错误！</string>
    <string name="remote_server_error">远程服务器繁忙，请稍等</string>
    <string name="account_exist">此账号已经注册</string>
    <string name="timeout">连接超时</string>
    <string name="next_step">下一步</string>
    <string name="nation_and_area">国家和地区</string>
    <string name="choose_country_area_code">选择国家和地区代码</string>
    <string name="china">中国</string>
    <string name="avatar">头像</string>
    <string name="please_set_avatar">请设置头像</string>
    <string name="invalid_params">无效的请求参数</string>
    <string name="pulltorefresh">提示...</string>
    <string name="lastupdate">最近更新</string>
    <string name="drop_down_to_refresh_list_pull_tips">下拉可以更新</string>
    <string name="drop_down_to_refresh_list_release_tips">松开即可更新</string>
    <string name="drop_down_to_refresh_list_refreshing_tips">正在更新中...</string>
    <string name="drop_down_to_refresh_list_refresh_view_tips">查看更多消息</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="verify_code_have_sent">验证码已经发送</string>
    <string name="verify_code_have_sent_to">验证码已经发送到</string>
    <string name="verify_phone">验证手机</string>
    <string name="input_received_verify_code">输入接收到的短信验证码</string>
    <string name="resend_verify_code">重发验证码</string>
    <string name="register_no_code">请点击下面“注册”按钮</string>
    <string name="verify_code_cant_empty">验证码不能为空</string>
    <string name="verification_code_wrong">验证码输入不正确</string>
    <string name="something_wrong">出错了!</string>
    <string name="find_pwd">找回密码</string>
    <string name="input_account_to_find_pwd">请输入要找回密码的账号(手机号)</string>
    <string name="submit">提交</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_sms_verification_code">请输入短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code_have_sent_to_phone">验证码已发送到手机</string>
    <string name="resetting_pwd">正在重置密码...</string>
    <string name="pwd_reset_success">密码重置成功！</string>
    <string name="software_update">软件更新</string>
    <string name="update">更新</string>
    <string name="update_force">必须升级版本，给以更佳体验！</string>
    <string name="will_update">发现新版本，是否立即更新?</string>
    <string name="already_newest_version">已是最新版本！</string>
    <string name="stop">停止</string>
    <string name="download_app">下载</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="retry">重试</string>
    <string name="install_app">安装</string>
    <string name="download_waiting">等待...</string>
    <string name="download_started">准备...</string>
    <string name="downloading">下载中...</string>
    <string name="download_cancelled">下载暂停</string>
    <string name="download_success">下载完成</string>
    <string name="download_failure">下载失败</string>
    <string name="download_error">下载出错</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_y">前天</string>
    <string name="voice_deleted">此录音文件已删</string>
    <string name="vip">会员</string>
    <string name="vip_fence">围栏</string>
    <string name="vip_fence_notify">可建#个电子围栏</string>
    <string name="vip_alarm">启动警报</string>
    <string name="vip_hide_child_icon">流量保护</string>
    <string name="vip_remove_ads">去广告</string>
    <string name="vip_remove_ads_notify">广告将不再出现了</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="current_choose">当前选择：</string>
    <string name="rmb">元</string>
    <string name="choose_pay_type">请选择支付方式</string>
    <string name="alipay_pay">支付宝安全支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="phone_pay">话费支付</string>
    <string name="confirm_pay">确认付款</string>
    <string name="pay">购买</string>
    <string name="not_vip">您还不是会员，无法进行此项操作，请先充值成会员！</string>
    <string name="no_permission">您没有权限进行此操作，请到会员中心充值升级！</string>
    <string name="expired">您会员已过期，请到会员中心充值续费！</string>
    <string name="recharge">充值</string>
    <string name="vip_upgrade">升级</string>
    <string name="renewal">续费</string>
    <string name="left">剩余</string>
    <string name="reg_agree_disclaimer">注册即同意免责声明</string>
    <string name="disclaimer">手机号定位免责声明</string>
    <string name="disclaimer_context_1">1 联网服务</string>
    <string name="disclaimer_context_1_1">1.1由于用户（指最终用户）将个人密码告知他人或与他人共享注册帐户，由此导致的任何个人资料泄露，北京维艾德科技有限公司（以下简称：维艾德）不负任何责任；</string>
    <string name="disclaimer_context_1_2">1.2用户明确同意其使用维艾德服务所存在的风险将完全由其自己承担。因其使用这些服务而产生的一切后果也由其自己承担，维艾德对此不承担任何责任；</string>
    <string name="disclaimer_context_1_3">1.3本软件为免费产品，用户若通过移动设备及其他设备访问产生的相关费用，维艾德不负任何责任；</string>
    <string name="disclaimer_context_1_4">1.4当政府司法机关依照法定程序要求维艾德披露个人资料时，维艾德将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，维艾德均得免责；</string>
    <string name="disclaimer_context_1_5">1.5若因线路及维艾德控制范围外的硬件故障或其它不可抗力而导致暂停服务，于暂停服务期间造成的一切不便与损失，维艾德不负任何责任；</string>
    <string name="disclaimer_context_1_6">1.6任何由于黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营的不可抗力而造成的个人资料泄露、丢失、被盗用或被窜改等，维艾德均得免责。 </string>
    <string name="disclaimer_context_2">2 关于GPS，Wifi，基站定位服务</string>
    <string name="disclaimer_context_2_1">2.1 用户位于定位盲区或全球定位卫星系统无效时, 由此造成的一切不便与损失，维艾德不负任何责任；</string>
    <string name="disclaimer_context_2_2">2.2 本软件提供的定位服务有一定偏差，由此造成的一切不便与损失，维艾德不负任何责任；</string>
    <string name="disclaimer_context_2_3">2.3 注册本软件即表示同意开放自己位置。</string>
    <string name="disclaimer_context_3">3 关于第三方提供的内容</string>
    <string name="disclaimer_context_3_1">本软件发布的地图和反馈均由第三方提供。对由这些第三方提供的资料的准确性、真实性、完整性或质量，维艾德不作任何声明或保证。对于因使用任何第三方的资料或网址而引起的或与之有关的任何直接或间接的损害赔偿, 维艾德概不承担责任。</string>
    <string name="disclaimer_context_4">4 关于法律责任</string>
    <string name="disclaimer_context_4_1">4.1本软件用户因为违反本声明的规定而触犯中华人民共和国法律的，一切后果自己负责，维艾德不承担任何责任；</string>
    <string name="disclaimer_context_4_2">4.2凡以任何方式登陆本软件或直接、间接使用本软件资料者，视为自愿接受本声明的约束；</string>
    <string name="disclaimer_context_4_3">4.3本声明未涉及的问题参见国家有关法律法规，当本声明与国家法律法规冲突时，以国家法律法规为准。 </string>
    <string name="add_efence">添加围栏</string>
    <string name="delete_efence">删除围栏</string>
    <string name="no_permission_for_more_fence">您没有权限创建更多围栏，要想创建更多围栏，请到会员中心充值升级！</string>
    <string name="fence_num_limited">您创建的围栏已达上限！</string>
    <string name="phone_contacts">手机联系人</string>
    <string name="nearby">附近</string>
    <string name="game">游戏</string>
    <string name="vip_center">会员中心</string>
    <string name="person_info">个人信息</string>
    <string name="share">分享给好友</string>
    <string name="feedback">反馈</string>
    <string name="system_notify">系统通知</string>
    <string name="join_qq_group">QQ群支持</string>
    <string name="join_vip_group">VIP群支持</string>
    <string name="image">图片</string>
    <string name="short_video">小视频</string>
    <string name="take_pic">拍照</string>
    <string name="choose_from_album">从相册中选择</string>
    <string name="will_cancel_voice">您要取消此段录音吗？</string>
    <string name="send">发送</string>
    <string name="startup">启动</string>
    <string name="please_input_content">请输入内容</string>
    <string name="press_and_say">按住说话</string>
    <string name="release_to_end">松开结束</string>
    <string name="please_check_record_permission_wether_opened">请检查[录音权限]是否打开</string>
    <string name="record_time_too_short">录音时长太短，至少%s秒！</string>
    <string name="connection_crack_off">连接已断开！</string>
    <string name="no_more_hist_record">没有更多历史记录了</string>
    <string name="move_to_this_to_cancel_voice">移动到此处可取消此语音</string>
    <string name="release_to_delete_this_voice">松手删除此条语音消息</string>
    <string name="will_start_remote_record">您确定要对家人/好友紧急录音吗？</string>
    <string name="will_receive_remote_record">秒后，您将收到家人/好友的紧急录音</string>
    <string name="account_set">账户设置</string>
    <string name="gender">性别</string>
    <string name="nick">昵称</string>
    <string name="age">年龄</string>
</resources>