<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar_back" />

    <LinearLayout
        android:id="@+id/current_choose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_choose"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vip_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="----"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="----"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/pay_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_choose"
        android:layout_margin="8dp"
        android:text="@string/choose_pay_type"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/alipay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pay_type"
        android:background="@drawable/selector_white_blue"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/alipay" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/alipay_pay"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wechat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_white_blue"
        android:orientation="horizontal"
        android:layout_below="@+id/alipay"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/wechat" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/wechat_pay"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:layout_margin="5dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wechat"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_white_blue"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/phone_pay"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:layout_margin="5dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null" />
    </LinearLayout>

    <Button
        android:id="@+id/pay"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_blue_btn"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>