<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/vip_center"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/vip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/vip_center"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/account_set"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/account_set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/account_set"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/share"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/feedback"
                android:textSize="20sp" />
        </LinearLayout>

        <!--
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />
        
        <LinearLayout
            android:id="@+id/system_notify"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/sys_notify" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/system_notify"
                android:textSize="20sp" />
        </LinearLayout>
        -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/join_vip_group"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/qq_vip_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/join_vip_group"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/join_qq_group"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:visibility="gone"
            android:background="@drawable/selector_white_blue"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/qq_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/join_qq_group"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>